# text-corpora-analyzer

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
corpora_analyzer/: corpora_analyzer.py
